# OpenGLStudy

./: .gitignore  main.cpp
opengl_work/HelloTriangle/: CMakeLists.txt
opengl_work/HelloTriangle/shaders/: color.vert  uniform.frag  uniform.vert
opengl_work/HelloTriangle/src/: main.cpp
opengl_work/TextureDemo/: CMakeLists.txt
opengl_work/TextureDemo/shaders/: tex_mix.frag  tex_single.frag
opengl_work/TextureDemo/src/: main_mix.cpp  main_single.cpp
shaders/: color.frag  color.vert  simple.frag
